Fix top margin for cta on mobile.

--- a/src/index.css
+++ b/src/index.css
@@ -1329,7 +1329,7 @@ h4 {
 
 @media (max-width: 60rem) {
     .cta {
-        margin-top: 5rem;
+        margin-top: 4.3rem;
         height: 500px;
         background-position-x: 52%;
     }
